# AMD_Robotics_Hackathon_2025_GoodNight

./: .gitignore  AGENTS.md  README.md  requirements.txt
mission2/: .gitignore  README.md  __init__.py  pyproject.toml  pytest.ini
mission2/.calibration/robots/so101_follower/: bi_so101_follower_left.json  bi_so101_follower_right.json
mission2/.calibration/teleoperators/so101_leader/: bi_so101_leader_left.json  bi_so101_leader_right.json
mission2/application/: act_inference_control.py  robot_control.py  so-101_callAPI.py
mission2/docs/: bi_so101_bimanual.md  finetuning.md  image_transforms.md  inference.md
mission2/lerobot/src/lerobot/configs/: default.py  train.py
mission2/lerobot/src/lerobot/datasets/: aggregate.py  factory.py  transforms.py
mission2/lerobot/src/lerobot/scripts/: lerobot_train.py  (+1 more)
mission2/lerobot/tests/datasets/: test_image_transforms.py
mission2/src/: __init__.py
mission2/src/lerobot_robot_bi_so101/: __init__.py
mission2/src/lerobot_teleoperator_bi_so101/: __init__.py
mission2/src/processors/: __init__.py  image_transforms.py
mission2/src/robots/: __init__.py  bi_so101_follower.py  config_bi_so101_follower.py
mission2/src/teleoperators/: __init__.py  bi_so101_leader.py  config_bi_so101_leader.py
mission2/src/train_wrappers/: __init__.py  train_with_local_transforms.py
mission2/tests/: conftest.py  test_image_transforms.py
mission2/tests/robots/: test_bi_so101_follower.py
mission2/wandb/wandb_mission2_act_003/latest-run/: run-9iupdez0.wandb
mission2/wandb/wandb_mission2_act_004/latest-run/: run-dvz8uuyz.wandb
(+16 files in other folders)
