[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bi-so101-ext"
version = "0.1.0"
description = "Bimanual SO-101 extensions for LeRobot (robots + teleoperators)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "robots",
    "teleoperators",
    "lerobot_teleoperator_bi_so101",
    "lerobot_robot_bi_so101",
    "processors",
    "train_wrappers",
]

[project.optional-dependencies]
tests = ["pytest"]
